--- a/File Creator/en.lproj/MainMenu.xib
+++ b/File Creator/en.lproj/MainMenu.xib
@@ -1458,7 +1458,7 @@
 															<string key="NSFrame">{{101, 10}, {100, 26}}</string>
 															<reference key="NSSuperview" ref="121273868"/>
 															<reference key="NSWindow"/>
-															<reference key="NSNextKeyView" ref="42538778"/>
+															<reference key="NSNextKeyView" ref="515499786"/>
 															<string key="NSReuseIdentifierKey">_NS:9</string>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSPopUpButtonCell" key="NSCell" id="37495141">
@@ -1473,18 +1473,7 @@
 																<string key="NSKeyEquivalent"/>
 																<int key="NSPeriodicDelay">400</int>
 																<int key="NSPeriodicInterval">75</int>
-																<object class="NSMenuItem" key="NSMenuItem" id="398546829">
-																	<reference key="NSMenu" ref="552703411"/>
-																	<string key="NSTitle">/bin/sh</string>
-																	<string key="NSKeyEquiv"/>
-																	<int key="NSKeyEquivModMask">1048576</int>
-																	<int key="NSMnemonicLoc">2147483647</int>
-																	<int key="NSState">1</int>
-																	<reference key="NSOnImage" ref="35465992"/>
-																	<reference key="NSMixedImage" ref="502551668"/>
-																	<string key="NSAction">_popUpItemAction:</string>
-																	<reference key="NSTarget" ref="37495141"/>
-																</object>
+																<nil key="NSMenuItem"/>
 																<bool key="NSMenuItemRespectAlignment">YES</bool>
 																<object class="NSMenu" key="NSMenu" id="552703411">
 																	<string key="NSTitle">OtherViews</string>
@@ -1500,7 +1489,17 @@
 																			<string key="NSAction">_popUpItemAction:</string>
 																			<reference key="NSTarget" ref="37495141"/>
 																		</object>
-																		<reference ref="398546829"/>
+																		<object class="NSMenuItem" id="398546829">
+																			<reference key="NSMenu" ref="552703411"/>
+																			<string key="NSTitle">/bin/sh</string>
+																			<string key="NSKeyEquiv"/>
+																			<int key="NSKeyEquivModMask">1048576</int>
+																			<int key="NSMnemonicLoc">2147483647</int>
+																			<reference key="NSOnImage" ref="35465992"/>
+																			<reference key="NSMixedImage" ref="502551668"/>
+																			<string key="NSAction">_popUpItemAction:</string>
+																			<reference key="NSTarget" ref="37495141"/>
+																		</object>
 																		<object class="NSMenuItem" id="17485435">
 																			<reference key="NSMenu" ref="552703411"/>
 																			<string key="NSTitle">/bin/zsh</string>
@@ -1535,7 +1534,7 @@
 																	</array>
 																	<reference key="NSMenuFont" ref="1048313368"/>
 																</object>
-																<int key="NSSelectedIndex">1</int>
+																<int key="NSSelectedIndex">-1</int>
 																<int key="NSPreferredEdge">1</int>
 																<bool key="NSUsesItemFromMenu">YES</bool>
 																<bool key="NSAltersState">YES</bool>
@@ -1602,29 +1601,6 @@
 																<string key="NSKeyEquivalent"/>
 																<int key="NSPeriodicDelay">200</int>
 																<int key="NSPeriodicInterval">25</int>
-															</object>
-														</object>
-														<object class="NSTextField" id="42538778">
-															<reference key="NSNextResponder" ref="121273868"/>
-															<int key="NSvFlags">268</int>
-															<string key="NSFrame">{{262, 17}, {139, 17}}</string>
-															<reference key="NSSuperview" ref="121273868"/>
-															<reference key="NSWindow"/>
-															<reference key="NSNextKeyView" ref="515499786"/>
-															<string key="NSReuseIdentifierKey">_NS:1535</string>
-															<bool key="NSEnabled">YES</bool>
-															<object class="NSTextFieldCell" key="NSCell" id="666733223">
-																<int key="NSCellFlags">68157504</int>
-																<int key="NSCellFlags2">272630784</int>
-																<string key="NSContents">&lt;= Not implemented</string>
-																<reference key="NSSupport" ref="1048313368"/>
-																<string key="NSCellIdentifier">_NS:1535</string>
-																<reference key="NSControlView" ref="42538778"/>
-																<reference key="NSBackgroundColor" ref="996501504"/>
-																<object class="NSColor" key="NSTextColor">
-																	<int key="NSColorSpace">1</int>
-																	<bytes key="NSRGB">MSAwIDAuMDQ3MTE4NzQyOTcAA</bytes>
-																</object>
 															</object>
 														</object>
 													</array>
@@ -2608,6 +2584,22 @@
 						<reference key="destination" ref="933085138"/>
 					</object>
 					<int key="connectionID">753</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">shellSelector</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="349310947"/>
+					</object>
+					<int key="connectionID">825</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">shellSelectorSelected:</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="349310947"/>
+					</object>
+					<int key="connectionID">826</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -3714,10 +3706,9 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="19620592"/>
 							<reference ref="858809479"/>
-							<reference ref="349310947"/>
 							<reference ref="438560199"/>
 							<reference ref="618346408"/>
-							<reference ref="42538778"/>
+							<reference ref="349310947"/>
 						</array>
 						<reference key="parent" ref="616048138"/>
 					</object>
@@ -3901,19 +3892,6 @@
 						<int key="objectID">791</int>
 						<reference key="object" ref="295458576"/>
 						<reference key="parent" ref="618346408"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">810</int>
-						<reference key="object" ref="42538778"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="666733223"/>
-						</array>
-						<reference key="parent" ref="95431305"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">811</int>
-						<reference key="object" ref="666733223"/>
-						<reference key="parent" ref="42538778"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">812</int>
@@ -4142,8 +4120,6 @@
 				<string key="790.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="791.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="81.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="810.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="811.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="812.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="813.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="814.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -4158,7 +4134,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">819</int>
+			<int key="maxID">826</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -4168,6 +4144,7 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="openHomepage:">id</string>
 						<string key="quitApp:">id</string>
+						<string key="shellSelectorSelected:">id</string>
 						<string key="showPreferences:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
@@ -4179,6 +4156,10 @@
 							<string key="name">quitApp:</string>
 							<string key="candidateClassName">id</string>
 						</object>
+						<object class="IBActionInfo" key="shellSelectorSelected:">
+							<string key="name">shellSelectorSelected:</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="showPreferences:">
 							<string key="name">showPreferences:</string>
 							<string key="candidateClassName">id</string>
@@ -4186,6 +4167,7 @@
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="preferencesWindow">NSWindow</string>
+						<string key="shellSelector">NSPopUpButton</string>
 						<string key="statusMenu">NSMenu</string>
 						<string key="window">NSWindow</string>
 					</dictionary>
@@ -4193,6 +4175,10 @@
 						<object class="IBToOneOutletInfo" key="preferencesWindow">
 							<string key="name">preferencesWindow</string>
 							<string key="candidateClassName">NSWindow</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shellSelector">
+							<string key="name">shellSelector</string>
+							<string key="candidateClassName">NSPopUpButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="statusMenu">
 							<string key="name">statusMenu</string>
